Use mqtt instead of deprecated mqttjs package

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     , "jade": ">= 0.0.1"
     , "redis": ">= 0.7.1"
     , "socket.io": ">= 0.8.7"
-    , "mqttjs": ">= 0.1.7"
+    , "mqtt": ">= 0.1.7"
     , "onoff": ">= 0.1.0"
     , "spi": ">= 0.0.1"
   }
